--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ form button {
 }
 
 #about-me, #contact-me {
-  background-color: #4d8acf;
+  background-color: #0e335e;
   padding: 10px 0;
 }
 
