--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  background-color: #3E7CB1;
+  background-color: #1c62a0;
   margin-bottom: 30px;
 }
 
@@ -165,7 +165,7 @@ form button {
 }
 
 footer {
-  background-color: #3E7CB1;
+  background-color: #1c62a0;
   padding: 10px 0;
   text-align: center;
 }
